# inf02

./: README.md  create-docs.sh
backend/: Cargo.toml  README.md  wrangler.toml
backend/src/: router.rs
backend/src/pages/: test.rs
docs-creator/: Cargo.toml  package-lock.json  package.json
docs-creator/src/: app.html  main.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.html  service-worker.ts
frontend/src/lib/: stores.ts  types.ts  utils.ts
frontend/src/lib/components/: GoUpButton.svelte  Header.svelte  OneQuestionTest.svelte  QuestionElement.svelte  QuestionsHandler.svelte  QuestionsTest.svelte  WholeBaseQuestions.svelte  WholeBaseTest.svelte  WholeStarredQuestions.svelte
frontend/src/lib/components/Markdown/: Markdown.svelte  MarkdownEditor.svelte  github.css
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/base/: +page.svelte
frontend/src/routes/docs/: +page.svelte
frontend/src/routes/other/: +page.svelte
frontend/src/routes/other/base/: +page.svelte
frontend/src/routes/other/docs/: +page.svelte  +page.ts
frontend/src/routes/other/oldbase/: +page.svelte
frontend/src/routes/tests/: +page.svelte
frontend/static/: base.json  docs.json  inf02-2022.json  manifest.json  old_base.json
leaked-base-scraper/: Cargo.toml  input.html
leaked-base-scraper/src/: main.rs
pdf-test/: Cargo.toml
pdf-test/src/: main.rs
scraper/: .gitignore  Cargo.toml  base.json  baza.json  baza.json.old
scraper/src/: main.rs  scraper.rs  utils.rs
(+11 files in other folders)
